Update some plugins
Small fixes

--- a/assets/libs/gmdjs/grid/mixins/_hidden.sass
+++ b/assets/libs/gmdjs/grid/mixins/_hidden.sass
@@ -42,7 +42,7 @@
     +media-sm(down)
       display: none
   @else if $direction == up
-    +media-sm()
+    +media-sm(up)
       display: none
 
 =hidden-xs($direction: min)
