Add MD palette colors, dt(), +shadow(), +button()

--- a/assets/libs/gmdjs/_settings.sass
+++ b/assets/libs/gmdjs/_settings.sass
@@ -1,9 +1,14 @@
 // Breakpoints
-$xl: 1366px
-$lg: 1100px
-$md: 800px
-$sm: 560px
+$xl: 1360px
+$lg: 1280px
+$md: 960px
+$sm: 840px
 $xs: $sm - 1px
+
+// Choose setup you need or make own
+// Accepted parameters: md, material-large, bootstrap, custom
+$setup: bootstrap
+@import "variables"
 
 // Set the desired number of columns
 $columns: 12
@@ -12,4 +17,4 @@ $columns: 12
 $margin: 24px
 
 // Enable Mobile first
-$mobile-first: false
+//$mobile-first: false
