--- a/assets/libs/gmdjs/grid/mixins/_hidden.sass
+++ b/assets/libs/gmdjs/grid/mixins/_hidden.sass
@@ -45,7 +45,7 @@
     +media-sm(up)
       display: none
 
-=hidden-xs($direction: min)
+=hidden-xs($direction: down)
   @if $direction == down
     +media-xs(down)
       display: none
