--- a/assets/libs/gmdjs/styles/_training.sass
+++ b/assets/libs/gmdjs/styles/_training.sass
@@ -33,7 +33,7 @@
   +container()
   &__item-xl
     +media-xl
-      background-color: rgb(142, 133, 122)
+      background-color: md-pink(900)
   &__item-lg
     +hidden-lg(down)
     +media-lg
