--- a/assets/libs/gmdjs/grid/mixins/_container.sass
+++ b/assets/libs/gmdjs/grid/mixins/_container.sass
@@ -10,14 +10,14 @@
   @if $state == fixed
     +media-xl()
       max-width: $xl - $margin * 3
-    +media-lg(down)
-      max-width: $lg - $margin * 3
-    +media-md(down)
-      max-width: $md - $margin * 3
-    +media-sm(down)
-      max-width: $sm - $margin * 3
-    +media-xs()
-      max-width: 100%
 
+    +media-lg
+      max-width: $lg - $margin * 3
+
+    +media-md
+      max-width: $md - $margin * 3
+
+    +media-sm
+      max-width: $sm - $margin * 3
   @else if $state == fluid
     max-width: 100%
