--- a/assets/libs/gmdjs/styles/_grid.sass
+++ b/assets/libs/gmdjs/styles/_grid.sass
@@ -16,7 +16,7 @@ $color-bg-light: white
     text-align: center
     background-color: $color-accent
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12)
-    padding: 8px
+    padding: dt()
     border-radius: 2px
     margin:
       top: $margin / 2
