--- a/assets/libs/gmdjs/_settings.sass
+++ b/assets/libs/gmdjs/_settings.sass
@@ -1,20 +1,20 @@
+// Set the desired number of columns
+$columns: 12 !default
+
+// Set margin between columns
+$margin: 24px !default
+
 // Breakpoints
-$xl: 1360px
-$lg: 1280px
-$md: 960px
-$sm: 840px
-$xs: $sm - 1px
+$xl: 1200px + $margin * 3
+$lg: 960px + $margin * 3
+$md: 768px + $margin * 3
+$sm: 576px + $margin * 3
+$xs: $sm - 1px + $margin * 3
 
 // Choose setup you need or make own
 // Accepted parameters: md, material-large, bootstrap, custom
 $setup: bootstrap
 @import "variables"
-
-// Set the desired number of columns
-$columns: 12
-
-// Set margin between columns
-$margin: 24px
 
 // Enable Mobile first
 //$mobile-first: false
