Add mixin '+fonts()' for including fonts

--- a/assets/libs/gmdjs/_settings.sass
+++ b/assets/libs/gmdjs/_settings.sass
@@ -13,7 +13,7 @@ $xs: $sm - 1px + $margin * 3
 
 // Choose setup you need or make own
 // Accepted parameters: md, material-large, bootstrap, custom
-$setup: bootstrap
+$setup: custom
 @import "variables"
 
 // Enable Mobile first
