--- a/assets/sass/_default.sass
+++ b/assets/sass/_default.sass
@@ -2,7 +2,7 @@ body
 	font-family: "Roboto", sans-serif
 	min-width: 320px
 
-*
-	&::selection
-		background-color: #338FFF
-		color: #fff
+// *
+// 	&::selection
+// 		background-color: #338FFF
+// 		color: #fff
