--- a/assets/pug/head.pug
+++ b/assets/pug/head.pug
@@ -6,11 +6,13 @@ head
 	meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
 
 	// Template Basic Images Start
-	meta(property='og:image', content='path/to/image.jpg')
-	link(rel='shortcut icon', href='img/favicon/favicon.ico', type='image/x-icon')
-	link(rel='apple-touch-icon', href='img/favicon/apple-touch-icon.png')
-	link(rel='apple-touch-icon', sizes='72x72', href='img/favicon/apple-touch-icon-72x72.png')
-	link(rel='apple-touch-icon', sizes='114x114', href='img/favicon/apple-touch-icon-114x114.png')
+	link(rel='apple-touch-icon', sizes='180x180', href='img/favicon/apple-touch-icon.png')
+	link(rel='icon', type='image/png', sizes='32x32', href='img/favicon/favicon-32x32.png')
+	link(rel='icon', type='image/png', sizes='16x16', href='img/favicon/favicon-16x16.png')
+	link(rel='manifest', href='img/favicon/manifest.json')
+	link(rel='mask-icon', href='img/favicon/safari-pinned-tab.svg', color='#FFF')
+	meta(name='theme-color', content='#FFF')
+
 
 	// Load Styles
 	link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
